Stage 3: Docker, haproxy, api extensions
